# core

./: .dockerignore  .gitignore  Dockerfile  Gemfile  LICENSE  docker-compose.yml  gunicorn.conf.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  routes.py
app/clients/: jolpica_client.py
app/models/: __init__.py  circuit.py  constructor.py  constructor_standing.py  driver.py  driver_standing.py  event.py  event_result.py  race.py  race_driver_result.py  races.py  round.py  season.py
app/openapi/: f1.yml
app/services/: __init__.py  fetch_circuits.py  fetch_constructor_standings.py  fetch_constructors.py  fetch_driver_standings.py  fetch_drivers.py  fetch_events.py  fetch_races.py  fetch_rounds.py  fetch_seasons.py
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml
migrations/versions/: 1a5da62b3e69_made_event_result_points_nullable.py  6986d68b4e94_add_driverstanding_model.py  84c6912a3cd3_added_constructor_and_driver_standings.py  8793582ec3e1_initial.py  89d5b6d9f975_add_driverstanding_model.py  9098093e1c8d_initial_migration.py  966a62029755_remove_unqiue_identifiers_from_drivers.py  9804944d689e_add_adition_attributes_to_models.py  99865655966d_added_rounds_table_removed_seasons_.py  e5104f4a8e98_add_refactor_to_external_id_in_models.py  ef3c298ea4f8_add_constructorstandings_model.py  f053731a569d_updated_event_result_status_length.py  f1087969f1ec_.py
tests/clients/: test_jolpica_client.py
tests/services/: test_fetch_circuits.py  test_fetch_constructors.py  test_fetch_drivers.py  test_fetch_races.py  test_fetch_seasons.py
(+4 files in other folders)
